# plox

./: .pre-commit-config.yaml  README.md  ast_printer.py  lox.lark  main.py  pyproject.toml
lox/: Expr.py  Stmt.py  __main__.py  core.py  error.py  interpreter.py  parser.py  scanner.py
lox/tool/: ast_printer.py  generate_ast.py
tool/: ast_printer.py  generate_ast.py  visitor.py
