[tool.poetry]
name = "plox"
version = "0.1.0"
description = ""
authors = ["largomst <dingrui.zhen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
